--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,6 +52,13 @@ li {
    padding-right: 0;
  }
  
+ h5{
+  font-size: 21px;
+  margin-bottom: 5px;
+  margin-top: 10px;
+ }
+
+
 /* default-css END 
 ================================== */
 
